infrastructure/controllers/nvidia-gpu-operator/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-vectoradd
  namespace: gpu-operator
spec:
  restartPolicy: OnFailure
  containers:
  - name: cuda-vectoradd
    image: "nvcr.io/nvidia/k8s/cuda-sample:vectoradd-cuda11.7.1-ubuntu20.04"
    resources:
      limits:
        nvidia.com/gpu: "1"
  runtimeClassName: nvidia
