infrastructure/controllers/nvidia-gpu-operator/cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: cluster-policy
  namespace: gpu-operator
spec:
  validator:
    driver:
      env:
        - name: DISABLE_DEV_CHAR_SYMLINK_CREATION
          value: "true"
  daemonsets: {}
  dcgm:
    enabled: false
  dcgmExporter:
    enabled: true
  devicePlugin:
    enabled: true
  driver:
    enabled: false # Talos provides the driver
  gfd:
    enabled: true
  nodeStatusExporter:
    enabled: true
  operator:
    defaultRuntime: containerd # Talos uses containerd
    runtimeClass: nvidia
  toolkit:
    enabled: true # Enable toolkit validation for Talos
    installDir: /usr/local/nvidia
